// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryToggle matches its snapshot 1`] = `
<span
  className="contract"
>
  -
</span>
`;

exports[`CategoryToggle matches its snapshot 2`] = `
<span
  className="expand"
>
  +
</span>
`;

exports[`CategoryToggle matches its snapshot 3`] = `
<span
  className="expand"
>
  +
</span>
`;
